Quelques essais en Haskell (Coq -> Haskell)

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,8 @@
 *.vo
 *.log
 *.synctex.gz
+*.hi
+*.o
 *#
+sources/coq_implementation_test/haskell/Main
+sources/coq_implementation_test/haskell/Extracted.hs
