--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ sources/coq_implantation/makefile
 sources/coq_implantation/CoqMakefile.conf
 sources/coq_implantation/.CoqMakefile.d
 sources/coq_implantation/haskell/Extracted.hs
+sources/coq_implantation/haskell/Main
+sources/coq_implantation/haskell/Main
